====================
2018/4/26, 2018/7/18,19
v 5-0.43

- Added support for execute-with-alternative-super-variable ("xwsv").
- Bumped up COPPER_LANG_VERSION to 2.3 to reflect addition of execute-with-alternative-super function.
- Fixed typo in #ifdef in VarAddress::first().
- Changed CallbackWrapper run() to check against EngineResult::Error rather than EngineResult::Ok.
- Changed Scope to have settable initial size and set default to smaller. Stack frames use larger size. Sizes are #defines:
-- CU_FUNCTION_SCOPE_SIZE = 15
-- CU_STACK_FRAME_SCOPE_SIZE = 100
--- NOTE: The speed updates are incredible!

EngineMsgToStr
- Updated with error messages for execute-width-alternative-super errors.

Added StringInStream
Added FileInStream

docs
- Updated
- Small fixes


====================
2018/4/7 - 2018/4/26
v 5-0.42

- Changed Opcode::ConditionalGoto case in Engine::operate() to return an error instead of treating it as false.
- Bumped up COPPER_LANG_VERSION to 2.2 to reflect change in if-statements.
- Fixed bug in Body::compile_internal that caused parsing to stop (stream completed before parsing) even for valid input without a statement ending.


====================
2018/3/13 - 2018/3/14
v 5-0.41

- Cleaned up utilList.h.
- Fixed identical bug in Engine::resolveVariableAddress() and Engine::setupUserFunctionExecution() that failed to create member variables when the base was found in the global scope but not the full address.

index.html
- Name changed to o-index.html

Imported documentation from Copper Slate docs project.


====================
2018/3/10
v 5-0.401

- Made the Engine::print functions private. (These may change or be replaced.)
- Bumped up COPPER_LANG_VERSION to 2.1 to reflect the addition of lists and string functions.


====================
2018/3/3 - 2018/3/5
v 5-0.4

- Added #define COPPER_DEBUG_ADDRESS.